atualizando as imagens da secões

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, quia facilis earum voluptatibus eum illo quae nobis fugiat laboriosam magni nam magnam tempore illum officiis maiores, repellendus commodi odit ab!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-End">
+            <img class="event__image" src="./images/ui-ux.png" alt="Ui/UX">
         </div>
     </section>
     <section class="event event--data-science">
@@ -70,7 +70,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, quia facilis earum voluptatibus eum illo quae nobis fugiat laboriosam magni nam magnam tempore illum officiis maiores, repellendus commodi odit ab!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-End">
+            <img class="event__image" src="./images/data.png" alt="Data Science">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -81,7 +81,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, quia facilis earum voluptatibus eum illo quae nobis fugiat laboriosam magni nam magnam tempore illum officiis maiores, repellendus commodi odit ab!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-End">
+            <img class="event__image" src="./images/backend.png" alt="Back-End">
         </div>
     </section>
 
